# c_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_tests.sh
project/: main.c
project/include/: arith.h
project/src/: arith.c
test/: CMakeLists.txt  test_arith.c
